# project-brain

./: .gitignore  CLAUDE.md  README.md  ROADMAP.md  pyproject.toml
docs/: design-canonical.md  search-internals.md
docs/plans/: 2026-05-28-bb2-brain-p0-router.md  2026-05-29-bb2-brain-g11a-word-boundary-matching.md  2026-05-29-bb2-brain-g7-stale-currentview.md  2026-05-29-bb2-brain-g8-currentview-relevance-filter.md  2026-05-29-bb2-brain-g9-scope-filter.md  2026-05-30-bb2-brain-g11b-glossary-scope-bridge.md  2026-05-31-bb2-brain-g10-impl-location-claim-status.md  2026-05-31-bb2-brain-g11c-canonical-wiring.md  2026-05-31-bb2-brain-g11d-avoid-source-refactor.md  2026-05-31-bb2-brain-g4-why-changed-multi-event.md  2026-06-01-bb2-brain-g4b-evidence-provenance-source-expansion.md  2026-06-01-bb2-brain-g5-conflict-resolution.md  2026-06-01-bb2-brain-g6-why-changed-causality.md  2026-06-01-bb2-brain-ingest-write-path-first-slice.md  2026-06-02-bb2-brain-domain-context-v2.md  2026-06-02-bb2-brain-domain-mapping-lifecycle.md  2026-06-02-bb2-brain-router-mapping-integration.md  (+21 more)
tests/: __init__.py  test_assembly.py  test_cli.py  test_config.py  test_context_projection.py  test_doctor.py  test_embedder.py  test_eval_harness.py  test_graph.py  test_graph_viz.py  test_ingest.py  test_installer.py  test_lint.py  test_objbase.py  test_promote.py  test_raw_chunks.py  test_router.py  test_schema.py  test_search.py  test_search_index.py  test_session.py  test_stale_check.py  test_status.py  test_store.py  test_surface.py  test_tokenize_ko.py  test_universal_ingest_e2e.py
(+76 files in other folders)
